# SimpleECS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
code/SimpleECS/: ComponentHandler.h  Core.h  EcsManager.h  EventHandler.h  RealTimeEcs.h  Register.h  Systems.h  TypeWrapper.h  Typedef.h  ZZtemp.h
code/SimpleECS/src/: ComponentHandler.cpp  Core.cpp  EcsManager.cpp  EventHandler.cpp  Register.cpp  Systems.cpp  TypeWrapper.cpp
code/ecs/: Core.h  EventHandler.h  Manager.h  RealTimeEcs.h
code/example/clickblocks/: main.cpp
code/example/movingblocks/: main.cpp
code/examples/circleOfLife/: main.cpp
code/examples/exampleFromEntityx/: example.cc
code/examples/movingblocks/: main.cpp
code/examples/walkingLetters/: main.cpp
code/test/: Benchmarks_test.cc  Functionality_test.cc
code/test/functionality/: Bitset.cc  BitsetTest.cc  Core.cc  CoreTest.cc  Manager.cc  RealTimeEcs.cc  RtEcsEventHandelerTest.cc
examples/exampleFromEntityx/: example.cc
examples/movingblocks/: main.cpp
examples/walkingLetters/: main.cpp
googletest-release-1.8.1/googlemock/docs/: CookBook.md
test/: Benchmarks_test.cc  Timer.h
test/functionality/: BitsetTest.cc  CoreTest.cc  EventsTest.cc  Functionality_Tests.cc  RtEcsEventHandelerTest.cc
trash/: SFMLConfig.cmake
